<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="31"
    tools:context=".MainActivity$section_content" >

    <TextView
        android:id="@+id/section_label"
        android:layout_column="0"
        android:layout_row="0"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/title_sectiondummy"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/label_sub1"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="left|center_vertical"
        android:text="@string/title_sectiondummy_sub1"
        android:textAppearance="?android:attr/textAppearanceMedium" />    
    
    <TextView
        android:id="@+id/content_sub1"
        android:layout_column="0"
        android:layout_row="5"
        android:layout_gravity="left|top"
        android:text="@string/content_sectiondummy_sub1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/label_sub2"
        android:layout_column="0"
        android:layout_row="20"
        android:layout_gravity="left|center_vertical"
        android:text="@string/title_sectiondummy_sub2"
        android:textAppearance="?android:attr/textAppearanceMedium" />    
    
    <TextView
        android:id="@+id/content_sub2"
        android:layout_column="0"
        android:layout_row="25"
        android:layout_gravity="left|top"
        android:text="@string/content_sectiondummy_sub2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</GridLayout>